# ChangeLog for app-text/an
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/an/ChangeLog,v 1.28 2011/01/25 02:50:58 jer Exp $

  25 Jan 2011; Jeroen Roovers <jer@gentoo.org> an-0.95.3.ebuild,
  files/an-0.95-make.patch, files/an_0.95-3.diff:
  Clean up patches. Fix phases, remove ebegin/eend, make sed die().

*an-0.95.3.2 (27 Jun 2010)

  27 Jun 2010; Jeroen Roovers <jer@gentoo.org> -an-0.95.3.1.ebuild,
  +an-0.95.3.2.ebuild:
  Bump the Debian patch set. Replace the Makefile patch with a compatible
  set of sed scripts. Respect LDFLAGS. Do not patch lib/Makefile since we do
  not use it. Do not install INSTALL. Properly use EAPI=2.

*an-0.95.3.1 (18 Mar 2009)

  18 Mar 2009; Jeroen Roovers <jer@gentoo.org> +files/an-0.95-make.patch,
  +an-0.95.3.1.ebuild:
  Version bump. Do not store Debian patch locally. Remove some redundant
  comments and notifications.

  07 Mar 2009; Thomas Anderson <gentoofan23@gentoo.org> an-0.95.3.ebuild:
  Transition to eapi 2 use deps

  28 Aug 2008; Jeroen Roovers <jer@gentoo.org> an-0.95.3.ebuild:
  Improved HOMEPAGE.

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  09 Mar 2006; Jose Luis Rivero <yoswink@gentoo.org> an-0.95.3.ebuild:
  Marked alpha stable for bug #113966

  31 Jan 2006; Joseph Jezak <josejx@gentoo.org> an-0.95.3.ebuild:
  Marked ppc stable for bug #113966.

  24 Jan 2006; Patrick McLean <chutzpah@gentoo.org> an-0.95.3.ebuild:
  Stable on amd64 (bug #113966).

  24 Jan 2006; Ian Leitch <port001@gentoo.org> an-0.95.3.ebuild:
  Stable on x86 (bug #113966).

  24 Jan 2006; Markus Rothe <corsair@gentoo.org> an-0.95.3.ebuild:
  Stable on ppc64; bug #113966

  24 Jan 2006; Jeroen Roovers <jer@gentoo.org> an-0.95.3.ebuild:
  Stable on hppa (bug #113966).

  15 Jan 2006; Jose Luis Rivero <yoswink@gentoo.org> an-0.95.3.ebuild:
  mark ~alpha as requested by bug #113966
