@@ -1,20 +1,22 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX an-0.95-make.patch 661 RMD160 86c355eb57d5ca1b945056d6dd4abc72cbc88054 SHA1 223ea2e5dd46784ab4bc0cf8c5bc1fd5e05b5c04 SHA256 530edfa7dc335c2e18424a9a86dae1648a2faa9d1e43e5da7a93f78dd375ef84
 AUX an_0.95-3.diff 9793 RMD160 895c2eb2ca4d2336872c37e313dd4435f5f2d3be SHA1 e3ade3cd93f29132dcfeb6aab74cb434ffda0fd0 SHA256 ba9751e7a43d543515cf0f182f029aea127163ec3ed0c2934cc673aa0fb21816
 DIST an_0.95-3.2.diff.gz 5530 RMD160 213fa4a424fec5039af18d82b76311b10ff0bc38 SHA1 c7de943fb51376dd477b4283138a6f04e4c336ea SHA256 6b0b7a42f39abac072e5a20aa1f13e616b46e97a37dc3d6baa6af5416e1ab009
 DIST an_0.95.orig.tar.gz 47829 RMD160 eec61214eaf3f3ab0666cec4a146ed37e7e96263 SHA1 930ce6f737da315597f01b46f74c60b2bb6639bf SHA256 11266dd1e347594d98f8dfd1e141d8b4fbe067752542d0e93c422c4789f9295c
-EBUILD an-0.95.3.2.ebuild 1824 RMD160 9564e4cbf2b67836eb88c55109e171b27df62557 SHA1 83c69d7c7acb760462b5d2ae765c5c40ea336e82 SHA256 7ac069d6b5ea6278e9abd7b6edba0b6dda780a40cdf552396f2f9759b8629af9
+EBUILD an-0.95.3.2.ebuild 1823 RMD160 a212d941a5aba7c00557f4bbe40aa0446272d789 SHA1 6dd1a14997de403ffbc8a92351cb9e946c220280 SHA256 55795a5ddf96ab468ddc4bd1fdf9d7bc7d65ee459352397ff3c89b05215724f9
 EBUILD an-0.95.3.ebuild 1537 RMD160 1d480ee089222472769d3f1a84ac8fe3f82a1c94 SHA1 827be113b0076c3d3a0923e2407606adac9748e1 SHA256 979056fd62a675c6f60d056578e081879a1ad2d1a75f45b9de0f46213e71e085
-MISC ChangeLog 3845 RMD160 56e087dee9bc9c6cdaa479b77eb0b61a34cb8d2d SHA1 a836d68d6e5eb12fd701730047b24ad5247db6e4 SHA256 69ce37f2f0276e713c72481b0e890be1801bd7e353897e41d88bfa682331252c
+MISC ChangeLog 3951 RMD160 ba4dea373fd94145f54b27cca3714980f0b4ee19 SHA1 74ba4ca9bba97b5ed731bb71eb9df7b520a9ffb6 SHA256 85bb17e439b2217023e57bd5bd79c8c83e88b4db880c706fb189c4bfa7be2019
 MISC metadata.xml 339 RMD160 83998fc1d30425fbd8b654b44d4afcc384731a44 SHA1 7afbe07e187d98ed5588ecfaf9839b819005f9d6 SHA256 bea6b6e3844f9099e00a3895b8556df76d246828099005a952ccafc8802430d8
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iJwEAQEIAAYFAk5/GLUACgkQfXuS5UK5QB21bQP+PEqDjvhtvIq19JtUwlyvwJy+
-ekqpJmvbZ4ZodNvmEmivQOjrDzSR+bvf196pFaZuXc4xu9hw8r0IRlcjjtFF/mWP
-nRMez7ixXiI+aRGVMIvyUJAmY89CETJsF0v3MufwweQx6pquYYSLZYvs9FfdjO7P
-fSFm7c2oO8JiGBcyNl4=
-=PvAB
+iQEcBAEBCgAGBQJPzI7lAAoJEOTDgjZ80txdvFsIAJo2R6ky6/KDvgNABNP2FtwP
+9MhtTBsb+pgUBccpkmKeyiMow/C1stzmegYI9PDvwFEhk4txVd4dYvdQs72ybAjV
+KM6x8Zgzn6L0M7VfFq1xvE5IgwOQMplfzEorU0Y37mFYAZ3pW4L/4ulVXczXIJk7
+DNgIWELD051vAJkg5ZyFh7o+Gc2mSsrLFyapYTpk7ZuR8mOCFiORQd8c/ZBAJwa7
+s63yxamdEYxQ5soVUBtQOTlswnRi7le7699p+utWcIaA/X+C1dJWZBZcIXMxbvDz
+iZCNDLuchfofLzPrZTjYeLIrGwPQwSbErzQAfwfNVVYFh0xlBJGgkeOBtPGqfFE=
+=bwBi
 -----END PGP SIGNATURE-----
