@@ -1,6 +1,6 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/an/an-0.95.3.2.ebuild,v 1.1 2010/06/27 20:34:25 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/an/an-0.95.3.2.ebuild,v 1.2 2012/06/04 10:33:04 ago Exp $
 
 EAPI="2"
 
@@ -18,7 +18,7 @@ SRC_URI="
 
 LICENSE="GPL-2 LGPL-2"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~hppa ~ppc ~ppc64 ~x86"
+KEYWORDS="~alpha amd64 ~hppa ~ppc ~ppc64 ~x86"
 IUSE=""
 
 RDEPEND="sys-apps/miscfiles[-minimal]"
